Fixed z-indexing of mobile menu

--- a/_assets/stylesheets/header.css.sass
+++ b/_assets/stylesheets/header.css.sass
@@ -53,6 +53,7 @@
     margin-bottom: -100%
     position: relative
     background: white
+    z-index: 2
   &__menu-toggle-switch
     float: right
     font-size: $base-font-size * 3.5
